fix lore styling